# EstEngine

./: .clang-format  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
lib/: CMakeLists.txt
lib/include/: Game.h  MsgBox.h
lib/include/Audio/: AudioEngine.h  AudioSample.h  AudioStream.h
lib/include/Exceptions/: EstException.h
lib/include/Fonts/: FontManager.h
lib/include/Graphics/: GraphicsBackendBase.h  GraphicsTexture2D.h  NativeWindow.h  Renderer.h
lib/include/Inputs/: InputManager.h  Keys.h  Manager.h
lib/include/Math/: Color3.h  UDim.h  UDim2.h  Vector2.h  Vector4.h
lib/include/Misc/: Filesystem.h  MD5.h
lib/include/Screens/: Base.h  ScreenBase.h  ScreenManager.h
lib/include/Threads/: Thread.h
lib/include/UI/: Image.h  Rectangle.h  Text.h  UIBase.h
lib/src/: Game.cpp  MsgBox.cpp
lib/src/Audio/: AudioEngine.cpp  AudioSample.cpp  AudioStream.cpp
lib/src/Exceptions/: EstException.cpp
lib/src/Fonts/: FontManager.cpp
lib/src/Fonts/Platform/: Base.h  Linux.cpp  Linux.h  Win32.cpp  Win32.h
lib/src/Graphics/: NativeWindow.cpp  Renderer.cpp  ResourceBackendBase.h
lib/src/Graphics/Backends/D3D11/: D3D11Backend.cpp  D3D11Backend.h
lib/src/Graphics/Backends/OpenGL/: OpenGLBackend.cpp  OpenGLBackend.h  OpenGLTexture2D.cpp  OpenGLTexture2D.h
lib/src/Graphics/Backends/Vulkan/: VulkanBackend.cpp  VulkanBackend.h  VulkanDescriptor.h  VulkanTexture2D.cpp  VulkanTexture2D.h  vkinit.cpp  vkinit.h
lib/src/Graphics/Backends/Vulkan/VulkanBootstrap/: VkBootstrap.cpp  VkBootstrap.h
lib/src/Graphics/ImguiBackends/: imgui_impl_vulkan.cpp
lib/src/Graphics/Shaders/: image.frag  position.vert  solid.frag
lib/src/Graphics/Utils/: signalsmith-stretch.cpp
lib/src/Imgui/: imgui.cpp
lib/src/Inputs/: InputManager.cpp  Manager.cpp
lib/src/Math/: Color3.cpp  UDim.cpp  UDim2.cpp  Vector2.cpp  Vector4.cpp
lib/src/Misc/: Filesystem.cpp  MD5.cpp
lib/src/Screens/: Base.cpp  Manager.cpp  ScreenBase.cpp  ScreenManager.cpp
lib/src/Threads/: Thread.cpp  TimeWatch.cpp
lib/src/UI/: Image.cpp  Rectangle.cpp  Text.cpp  UIBase.cpp  UIBase.h
test/: CmakeLists.txt
test/src/: main.cpp
